Revision history for Class::Usul::Cmd

          - Fixes select method when defaulting to run_chain
          - Filters more crap from log lines
          - Adds encrypt/decrypt functions to Utils
          - Made functions of some introspection methods
          - Exposed leader attriubte instead of _name
          - Moves Cmd attributes to Trait::Base
          - Added some more constants and functions
          - Added more tests
          - Passes Class::Usul tests
          - Creates L10N trait
          - Fixes missing predicate coverage
          - Completed util test script
          - Flipped default on debug prompt. Removed noask/nodebug
          - Removed process table methods
          - Added POD. Started adding tests

0.1.1     2023-03-13 04:04:33
          - Added project files to master branch
